Explicit module support for HTTP/3 and QUIC codecs.
Motivation:

HTTP/3 and QUIC codecs have been added and are missing proper modular support as testing.

Changes:

Update netty-codec-http3, netty-codec-native-quic and netty-codec-classes-quic jar to support explicitly modularity.

Add testing to the JPMS testsuite.

Update Modular Netty guide.